deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: webservice-lb
spec:
  sessionAffinity: ClientIP
  selector:
    app: webservice
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: https
      port: 443
      targetPort: 8443
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: webservice-np
spec:
  selector:
    app: webservice
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 31080
    - name: https
      port: 443
      targetPort: 8443
      nodePort: 31433
  type: NodePort
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webservice-ingress
spec:
  tls:
    - hosts:
        - webservice-np-edu.openexchange.io
      secretName: tls-secret
  rules:
    - host: webservice-np-edu.openexchange.io
      http:
        paths:
          - path: /
            backend:
              serviceName: webservice-np
              servicePort: 80
